--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,144 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container {
+  padding: 2rem 2.5rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.row {
+  display: flex;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.hidden {
+  display: none;
 }
 
 .card {
-  padding: 2em;
+  position: relative;
+  margin: 5rem auto;
+  background-color: white;
+  max-width: min(85%, 660px);
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
-.read-the-docs {
-  color: #888;
+.card--img{
+  max-width: 100%;
+  border-radius: 10px 10px 0 0;
 }
+
+.card--info__intro{
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1.3rem;
+  color: var(--primary1);
+}
+
+.card--info__description{
+  color: var(--primary2);
+  line-height: 1.75;
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  padding-top: 0;
+}
+
+.social--img{
+  width: 50px;
+  border-radius: 50%;
+  margin-right: .5rem;
+}
+
+.social__text{
+  margin-right: auto;
+  h2{
+    margin: 0;
+    font-size: 1rem;
+    color: var(--primary1);
+  }
+  p {
+    margin: 0;
+    color: var(--primary2);
+  }
+}
+
+.share {
+  border-radius: 50%;
+  background-color: var(--background);
+  border: none;
+  padding: .75rem;
+}
+
+.share--links {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  min-height: 76px;
+  background-color: var(--primary1);
+  color: white;
+  border-radius: 0 0 10px 10px;
+  align-items: center;
+  gap: .5em;
+  p{
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: .5rem;
+    color: var(--neutral);
+  }
+  .share--links__icon:nth-child(4){
+    margin-right: auto;
+  }
+  button{
+    background-color: transparent;
+    border: none;
+  }
+  .share-active{
+    border-radius: 50%;
+    padding: .75rem;
+    border: none;
+    background-color: var(--neutral);
+  }
+}
+
+@media (min-width: 700px){
+  .card{
+    display: flex;
+    height: 200px;
+    width: 550px;
+    margin: 10rem auto;
+    font-size: .6rem;
+    .card--img{
+      width: 200px;
+      border-radius: 10px 0 0 10px;
+    }
+    .container{
+      padding: 1.5rem;
+    }
+    .social{
+      padding: 0 2.5rem 0 0;
+    }
+    .card--info__intro{
+      line-height: 1.25;
+    }
+    .share--links{
+      height: 50px;
+      bottom: 60px;
+      right: -75px;
+      padding: 0 1rem;
+      width: 250px;
+      border-radius: 10px;
+      align-items: center;
+      justify-content: center;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    }
+    .share--links__icon{
+      width: 100%;
+    }
+    .share-active{
+      display: none;
+    }
+    }
+  }
+
+
+
+
